manifests/apps-kustomize/base/frontend-service1.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-v1
  namespace: project1
  labels:
    app: frontend
    version: v1
spec:
  ports:
  - port: 8080
    name: http
    targetPort: 8080
  selector:
    app: frontend
    version: v1
