manifests/apps-kustomize/base/frontend-service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-v2
  namespace: project1
  labels:
    app: frontend
    version: v2
spec:
  ports:
  - port: 8080
    name: http
    targetPort: 8080
  selector:
    app: frontend
    version: v2
