manifests/apps-kustomize/base/frontend-route.yaml
apiVersion: v1
kind: Route
metadata:
  name: frontend
  namespace: project1
spec:
  port:
    targetPort: http
  tls:
    termination: edge
  to:
    kind: Service
    name: frontend-v1
    weight: 100
  wildcardPolicy: None
