manifests/apps-kustomize/base/frontend-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend
  namespace: project1
spec:
  hosts:
  - frontend.apps.cluster-550d.550d.sandbox1520.opentlc.com
  gateways:
  - project1/frontend-gateway
  http:
  - route:
    - destination:
        port:
          number: 8080
        host: frontend.project1.svc.cluster.local
